# SocketServer

./: CMakeLists.txt  main.cpp
SHDocument_Server/ClientManagement/: anhkhoa.txt
entity/: Message.cpp  Message.h
json/: json.c
model/: Handler.cpp  Handler.h
server/: Server.cpp  Server.h
